# Qt_Project

./: README.md
TCPSockerDemo/TcpSocket_Client/: TcpSocket_Client.pro  client.cpp  client.h  widget.cpp  widget.h
TCPSockerDemo/TcpSocket_Server/: TcpSocket_Server.pro  server.cpp  server.h  widget.cpp  widget.h
Video_Project/: CMakeLists.txt  resource.qrc  videoslider.cpp  videoslider.h  widget.cpp  widget.h
